don't lose focus when displaying password prompt dialog

fixes https://github.com/mate-desktop/mate-polkit/issues/19
fixes https://github.com/mate-desktop/marco/issues/117

thanks to Jeffrey Knockel
(see https://bugzilla.gnome.org/show_bug.cgi?id=676076
 and https://bugs.launchpad.net/bugs/946171)